Update from curriculum repo

--- a/module-1/lesson-1/Financial_Econometrics_Module 1_Lesson 1.ipynb
+++ b/module-1/lesson-1/Financial_Econometrics_Module 1_Lesson 1.ipynb
@@ -171,9 +171,9 @@
    "source": [
     "Assume you have identified that the following three factors are most impactful on *KO*’s stock price: *KO*’s revenue, Pepsi’s stock price, and the Dow Jones Industrial Average Index. We will use these three factors to create a linear regression model to predict *KO*'s next-day closing stock price. Finance theory tells us a stock excess return is a better variable to analyze than the actual price. The excess return is the actual return minus risk-free interest rate (usually Treasury Bill Rates). Therefore, we will convert all our variables into returns or ratios. In our modeling dataset, we will have the following variables:\n",
     "\n",
-    "> *KO*’s stock excess return (%) \\\n",
-    "> *KO*’s sales growth (%) \\\n",
-    "> *DOW 30* Index excess return (%) \\\n",
+    "> *KO*’s stock excess return (%) <br>\n",
+    "> *KO*’s sales growth (%) <br>\n",
+    "> *DOW 30* Index excess return (%) <br>\n",
     "> *Pepsi*’s stock excess return (%)\n",
     "\n",
     "In order to use comparable variables to conduct modeling work, all variables are quarterly ratios (quarterly excess returns and quarterly sales growth).\n",
@@ -339,12 +339,12 @@
     "id": "wOoqlGzDt_G6"
    },
    "source": [
-    "> Data Period: 2016Q2 – 2021Q3 \\\n",
-    "> Data Source: Yahoo Finance and Coca Cola’s website \\\n",
-    "> *KO_Q_EX_R*: *KO* Quarterly Stock Excess Return \\\n",
-    "> *Dow_Q_EX_R*: *DOW 30* Index Quarterly Excess Return \\\n",
-    "> *Pepsi_Q_EX_R*: Pepsi Quarterly Stock Excess Return \\\n",
-    "> *REV_Q_R*: *KO* Quarterly Revenue change %"
+    "> Data Period: 2016Q2 – 2021Q3 <br>\n",
+    "> Data Source: Yahoo Finance and Coca Cola’s website <br>\n",
+    "> *KO_Q_EX_R*: *KO* Quarterly Stock Excess Return <br>\n",
+    "> *Dow_Q_EX_R*: *DOW 30* Index Quarterly Excess Return <br>\n",
+    "> *Pepsi_Q_EX_R*: Pepsi Quarterly Stock Excess Return <br>\n",
+    "> *REV_Q_R*: *KO* Quarterly Revenue change % \n"
    ]
   },
   {
@@ -755,7 +755,7 @@
    "outputs": [],
    "source": [
     "# Influence plot\n",
-    "fig = sm.graphics.influence_plot(result, criterion=\"cooks\")\n",
+    "fig = sm.graphics.influence_plot(result, criterion=\"cooks\", alpha=0.5)\n",
     "fig.tight_layout(pad=1.0)"
    ]
   },
@@ -769,10 +769,10 @@
    },
    "outputs": [],
    "source": [
-    "# Finding most influential point\n",
+    "# Finding most influential points\n",
     "influence = result.get_influence()\n",
     "inf_sum = influence.summary_frame().sort_values(\"cooks_d\", ascending=False)\n",
-    "inf_sum.head()"
+    "inf_sum.head(30)"
    ]
   },
   {
@@ -782,9 +782,9 @@
     "id": "iVO1s8GPfGqe"
    },
    "source": [
-    "Figure 7 is an **influence plot.** It helps us visualize the *Cook’s D* among all data points. On the horizontal axis of the plot is hat value. Hat value measures the difference between the exogenous values of a data point and the mean of exogenous values in the dataset. On the vertical axis of the plot is studentized residuals. These are the standardized residuals from the predicted endogenous value of the data point from the model. The bubbles in the plot indicate the size of the *Cook’s D* for each point. The bigger the bubble, the higher the *Cook’s D* for a data point. \n",
+    "Figure 8 is an **influence plot.** It helps us visualize the *Cook’s D* among all data points. On the horizontal axis of the plot is hat value. Hat value measures the difference between the exogenous values of a data point and the mean of exogenous values in the dataset. On the vertical axis of the plot is studentized residuals. These are the standardized residuals from the predicted endogenous value of the data point from the model. The bubbles in the plot indicate the size of the *Cook’s D* for each point. The bigger the bubble, the higher the *Cook’s D* for a data point. \n",
     "\n",
-    "From the influence plot, we can see that Point 7, Point 15, and Point 18 have the highest *Cook’s D* values. Among the three points, Point 15 has a *Cook’s D* of 1.2, so we consider it an influential point."
+    "From the influence plot, we can see that Point 15 and Point 18 have the highest *Cook’s D* values. Among the points, Point 15 has a *Cook’s D* of 1.21, so we consider it an influential point."
    ]
   },
   {
@@ -842,7 +842,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
