--- a/module-2/lesson-1/Financial_Econometrics_Module 2_Lesson 1.ipynb
+++ b/module-2/lesson-1/Financial_Econometrics_Module 2_Lesson 1.ipynb
@@ -85,7 +85,7 @@
    "outputs": [],
    "source": [
     "# Import data\n",
-    "data_set = pd.read_csv(\"M2. module_2_data.csv\")"
+    "data_set = pd.read_csv(\"../M2. module_2_data.csv\")"
    ]
   },
   {
@@ -257,7 +257,7 @@
     "\\mathrm{Var}(Y|X)= \\mathrm{Var}(e|X) = \\delta^{2} \n",
     "$$\n",
     "\n",
-    "Because the variance function is for multiple regression, $$\\mathrm{Var}(e)$$ is actually a covariance matrix.\n",
+    "Because the variance function is for multiple regression, $\\mathrm{Var}(e)$ is actually a covariance matrix.\n",
     "\n",
     "$$ \n",
     "\\mathrm{Var}(e) = \\begin{pmatrix}\n",
@@ -771,10 +771,10 @@
     "We take partial derivatives of the objective function with respect to $\\beta_{0}$ and $\\beta_{1}$ to get the WLS estimates of $\\hat{\\beta_{0}}$ and $\\hat{\\beta_{1}}$\n",
     "\n",
     "$$ \n",
-    "\\begin{align}\n",
+    "\\begin{align*}\n",
     "  \\hat{\\beta_{0}}  &= \\overline{Y_{w}} - \\hat{\\beta_{1}} \\overline{X_{w}} \\\\\n",
     "  \\hat{\\beta_{1}}  &= \\frac{\\sum_{i=1}^{n}  w_{i}  (X_{i} - \\overline{X_{w}}) (Y_{i} -\\overline{Y_{w}})}{\\sum_{i=1}^{n}  w_{i}  (X_{i} - \\overline{X_{w}})^{2}} \n",
-    "\\end{align} \n",
+    "\\end{align*} \n",
     "$$\n",
     "\n",
     "Where $\\overline{X_{w}}$ and $\\overline{Y_{w}}$ are weighted averages of $X$ and $Y$ with weights $w$.\n",
@@ -862,7 +862,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
