--- a/module-2/lesson-2/Financial_Econometrics_Module 2_Lesson 2.ipynb
+++ b/module-2/lesson-2/Financial_Econometrics_Module 2_Lesson 2.ipynb
@@ -83,7 +83,7 @@
    "outputs": [],
    "source": [
     "# Import data\n",
-    "data_set = pd.read_csv(\"M2. module_2_data.csv\")"
+    "data_set = pd.read_csv(\"../M2. module_2_data.csv\")"
    ]
   },
   {
@@ -604,7 +604,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
