--- a/module-2/lesson-4/Financial_Econometrics_Module 2_Lesson 4.ipynb
+++ b/module-2/lesson-4/Financial_Econometrics_Module 2_Lesson 4.ipynb
@@ -83,7 +83,7 @@
    "outputs": [],
    "source": [
     "# Import data\n",
-    "data_set_r_working = pd.read_csv(\"M2. module_2_data.csv\")"
+    "data_set_r_working = pd.read_csv(\"../M2. module_2_data.csv\")"
    ]
   },
   {
@@ -736,7 +736,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
