Update from curriculum repo

--- a/module-1/lesson-4/Financial_Econometrics_Module 1_Lesson 4.ipynb
+++ b/module-1/lesson-4/Financial_Econometrics_Module 1_Lesson 4.ipynb
@@ -528,7 +528,7 @@
    },
    "outputs": [],
    "source": [
-    "# Visualise eigenvalues on scree plot\n",
+    "# Visualize eigenvalues on scree plot\n",
     "plt.scatter(range(1, df.shape[1] + 1), ev)\n",
     "plt.plot(range(1, df.shape[1] + 1), ev)\n",
     "plt.title(\"Scree Plot\", {\"size\": 16})\n",
