Update from curriculum repo

--- a/module-2/lesson-2/Financial_Econometrics_Module 2_Lesson 2.ipynb
+++ b/module-2/lesson-2/Financial_Econometrics_Module 2_Lesson 2.ipynb
@@ -49,7 +49,7 @@
     "id": "151c44d3"
    },
    "source": [
-    "*In the last lesson, we discussed how to use weights to handle unequal error terms from observations (heteroscedasticity) in a regression model. We also briefly mentioned that using weights can deal with outlier issues as well. In this lesson, we will dive deeper into how outliers can influence OLS regression model results. We will then propose an adjusted regression method to handle outliers: robust regression. There are several methods for robust regression. We will focus on two types: M-estimation and L1 regression.*\n",
+    "*In the last lesson, we discussed how to use weights to handle unequal error terms from observations (heteroskedasticity) in a regression model. We also briefly mentioned that using weights can deal with outlier issues as well. In this lesson, we will dive deeper into how outliers can influence OLS regression model results. We will then propose an adjusted regression method to handle outliers: robust regression. There are several methods for robust regression. We will focus on two types: M-estimation and L1 regression.*\n",
     "\n"
    ]
   },
