--- a/module-4/lesson-1/Lesson Notes - ECON_Module 4_Lesson 1.ipynb
+++ b/module-4/lesson-1/Lesson Notes - ECON_Module 4_Lesson 1.ipynb
@@ -564,7 +564,7 @@
     "\n",
     "This means autocovariance is only dependent on time difference $h$. For example, $Cov(X_t, X_{t+h}) = Cov(X_s, X_{s+h})$.\n",
     "\n",
-    "It also means when $h = 0$, autocovariance is independent of $t$. Since autocovariance is variance when $h = 0$, variance is constant. We therefore rule out the issue of heteroscedasticity in a stationary time series. The above stationarity definition is also called **weak stationarity**. There is also strict stationarity. \n",
+    "It also means when $h = 0$, autocovariance is independent of $t$. Since autocovariance is variance when $h = 0$, variance is constant. We therefore rule out the issue of heteroskedasticity in a stationary time series. The above stationarity definition is also called **weak stationarity**. There is also strict stationarity. \n",
     "\n",
     "For time series $\\{ X_t \\}$ to be **strictly stationary**, every finite joint probability distribution of $\\{ X_t \\}: \\{ x_{t_1}, x_{t_2}, \\cdots, x_{t_k} \\}$ needs to have the identical probabilistic behavior of every collective value of $\\{ x_{t_{1}+h}, x_{t_{2}+h}, \\cdots, x_{t_{k}+h} \\}$. It means the probabilistic behavior of a time series will not change when the time series shifts time. We can also express strict stationarity in the following way.\n",
     "\n",
