--- a/module-5/lesson-1/Lesson Notes - ECON_Module 5_Lesson 1.ipynb
+++ b/module-5/lesson-1/Lesson Notes - ECON_Module 5_Lesson 1.ipynb
@@ -172,7 +172,7 @@
     "id": "pDV-sOIZOKUr"
    },
    "source": [
-    "In portfolio management and risk management, managers control risk by monitoring the volatility of the underlying assets. Variance and standard deviations are common metrics to measure volatility. We can see from figure 1 that the local variance of Google stock returns changes substantially across the time period. This time series data exhibits heteroscedasticity. In the return plot, we can see there are pockets of time in the whole period where the movement of returns are more volatile than others. These high volatility pockets do not spread randomly during the whole time period. We call these **volatility clustering**. We notice that there is autocorrelation of asset returns. A highly volatile return one day would be followed by another highly volatile return the next day. It means that the past volatilities will still have an impact on today’s volatility. The highly volatile periods tend to group together. This is a key property that later we would like to model. \n"
+    "In portfolio management and risk management, managers control risk by monitoring the volatility of the underlying assets. Variance and standard deviations are common metrics to measure volatility. We can see from figure 1 that the local variance of Google stock returns changes substantially across the time period. This time series data exhibits heteroskedasticity. In the return plot, we can see there are pockets of time in the whole period where the movement of returns are more volatile than others. These high volatility pockets do not spread randomly during the whole time period. We call these **volatility clustering**. We notice that there is autocorrelation of asset returns. A highly volatile return one day would be followed by another highly volatile return the next day. It means that the past volatilities will still have an impact on today’s volatility. The highly volatile periods tend to group together. This is a key property that later we would like to model. \n"
    ]
   },
   {
@@ -299,7 +299,7 @@
     "id": "1ohHbJv7OJ09"
    },
    "source": [
-    "Now let’s formally introduce our first conditional variance model, ARCH(1) model. ARCH stands for autoregressive conditional heteroscedasticity. If we have a stationary asset return time series $r_{t}$, we can define ARCH(1) model for $r_{t}$ as follows:\n",
+    "Now let’s formally introduce our first conditional variance model, ARCH(1) model. ARCH stands for autoregressive conditional heteroskedasticity. If we have a stationary asset return time series $r_{t}$, we can define ARCH(1) model for $r_{t}$ as follows:\n",
     "\n",
     "$$ r_{t} = \\sigma_{t} e_{t} $$\n",
     "\n",
@@ -409,7 +409,7 @@
     "\n",
     "$$ r_{t} \\sim \\text{white noise} \\Big(0, \\frac{\\alpha_{0}}{1-\\alpha_{1}} \\Big) $$\n",
     "\n",
-    "We can see from the above result, $r_{t}$ is unconditionally homoscedastic when $0 \\le \\alpha_{1} < 1$. So when $r_{t}$ is stationary ($0 \\le \\alpha_{1} < 1$), $\\ r_{t}$ is conditionally heteroscedastic but unconditionally homoscedastic.\n",
+    "We can see from the above result, $r_{t}$ is unconditionally homoscedastic when $0 \\le \\alpha_{1} < 1$. So when $r_{t}$ is stationary ($0 \\le \\alpha_{1} < 1$), $\\ r_{t}$ is conditionally heteroskedastic but unconditionally homoscedastic.\n",
     "\n",
     "Although we are using asset returns for our ARCH model example, the original ARCH model was used for modeling squared error terms from a time series model. That’s why the ARCH model has this nice unconditional property as white noise.\n"
    ]
