--- a/module-5/lesson-2/Lesson Notes - ECON_Module 5_Lesson 2.ipynb
+++ b/module-5/lesson-2/Lesson Notes - ECON_Module 5_Lesson 2.ipynb
@@ -224,7 +224,7 @@
     "\n",
     "where $0 < \\alpha_{1} + \\beta_{1} < 1$\n",
     "\n",
-    "This shows similar results as the ARCH(1) model. $r_{t}$ is unconditionally homoscedastic when $\\alpha_{1} + \\beta_{1} < 1$. So when $r_{t}$ is stationary $(0 \\le \\alpha_{1} < 1)$, $\\ r_{t}$ is conditionally heteroscedastic but unconditionally homoscedastic. Also, even though we use asset return as an example for GARCH(1,1) here, it was originally applied to the squared error term from a time series regression model. \n"
+    "This shows similar results as the ARCH(1) model. $r_{t}$ is unconditionally homoscedastic when $\\alpha_{1} + \\beta_{1} < 1$. So when $r_{t}$ is stationary $(0 \\le \\alpha_{1} < 1)$, $\\ r_{t}$ is conditionally heteroskedastic but unconditionally homoscedastic. Also, even though we use asset return as an example for GARCH(1,1) here, it was originally applied to the squared error term from a time series regression model. \n"
    ]
   },
   {
