--- a/module-5/lesson-4/Lesson Notes - ECON_Module 5_Lesson 4.ipynb
+++ b/module-5/lesson-4/Lesson Notes - ECON_Module 5_Lesson 4.ipynb
@@ -360,7 +360,7 @@
     "id": "-TYrrPODHm3P"
    },
    "source": [
-    "In this section, we are going to apply Kalman filter to build a GARCH(1,1) model. We have studied in the previous lessons that GARCH model has conditional heteroscedasticity feature on the observation level. Hence, we need to incorporate this feature to a Kalman filter model. We can write the model as follows:\n",
+    "In this section, we are going to apply Kalman filter to build a GARCH(1,1) model. We have studied in the previous lessons that GARCH model has conditional heteroskedasticity feature on the observation level. Hence, we need to incorporate this feature to a Kalman filter model. We can write the model as follows:\n",
     "\n",
     "$$ \\begin{align*}\n",
     "  y_{t}  &= Fx_{t} + z_{t} \\\\\n",
@@ -412,7 +412,7 @@
     "id": "vS8_emvDHmu8"
    },
    "source": [
-    "In this lesson, we went through the theory of state space model. We talked about the basics of state space model, its properties, its benefits, and its estimation method. We then discussed a popular linear state space model, Kalman Filter. We explained how Kalman Filter works, how to derive the model and how to use it to forecast. After learning Kalman Filter, we combined Kalman Filter with GARCH(1,1) model and gave a brief model setup for Kalman Filter-GARCH(1,1) model. This lesson concludes our study on conditional heteroscedasticity in time series data. In the next module, we will dive into the method to check for stationary for a time series. We will also look into the relationship of two time series. \n"
+    "In this lesson, we went through the theory of state space model. We talked about the basics of state space model, its properties, its benefits, and its estimation method. We then discussed a popular linear state space model, Kalman Filter. We explained how Kalman Filter works, how to derive the model and how to use it to forecast. After learning Kalman Filter, we combined Kalman Filter with GARCH(1,1) model and gave a brief model setup for Kalman Filter-GARCH(1,1) model. This lesson concludes our study on conditional heteroskedasticity in time series data. In the next module, we will dive into the method to check for stationary for a time series. We will also look into the relationship of two time series. \n"
    ]
   },
   {
