Update from curriculum repo

--- a/module-2/lesson-1/Financial_Econometrics_Module 2_Lesson 1.ipynb
+++ b/module-2/lesson-1/Financial_Econometrics_Module 2_Lesson 1.ipynb
@@ -700,7 +700,7 @@
     "id": "lH35AIM_tfW1"
    },
    "source": [
-    "From Figure 7, we can see *X10Y_TBY* still has a positive coefficient and the coefficient is still significant. The $R^2$ also improves a lot from 0.03 to 0.10. Now, let’s look at the residuals and fitted values from WLS to see if we can correct the heteroskedasticity issue. Before doing that, we need to convert residuals to standardized residuals because the variables have been weighted. If we were to use old residuals, it would still be heteroskedastic. "
+    "From Figure 7, we can see *X10Y_TBY* still has a positive coefficient and the coefficient is still significant. The $R^2$ also improves a lot from 0.03 to 0.10. Now, let’s look at the residuals and fitted values from WLS to see if we can correct the heteroskedasticity issue."
    ]
   },
   {
