--- a/module-3/lesson-4/Lesson Notes - ECON_Module 3_Lesson 4.ipynb
+++ b/module-3/lesson-4/Lesson Notes - ECON_Module 3_Lesson 4.ipynb
@@ -698,7 +698,7 @@
     "\n",
     "The relationship between Clayton Copula’s parameter $\\theta$ and Kendall’s-tau is as follows:\n",
     "\n",
-    "$$ \\theta = \\frac{2\\tau}{\\tau} $$\n",
+    "$$ \\theta = \\frac{2\\tau}{1 - \\tau} $$\n",
     "\n",
     "From the above formula, we know as $\\theta \\to 0$, a Clayton copula turns into an independence copula. As $\\theta \\to \\infty $, a Clayton copula turns into a comonotonic copula. As $\\theta = -1$, a Clayton copula reaches the Hoeffding and Frechet lower bound.\n",
     "\n",
@@ -1240,7 +1240,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
