--- a/module-5/lesson-2/Lesson Notes - ECON_Module 5_Lesson 2.ipynb
+++ b/module-5/lesson-2/Lesson Notes - ECON_Module 5_Lesson 2.ipynb
@@ -766,7 +766,7 @@
     "ax[2, 0].set_title(\"Cross-Correlation of Squared Observations \\n vs Actual Observation\")\n",
     "\n",
     "# Figure Row 3 Column 2\n",
-    "standaraized_residuals = garch11_fit.resid.dropna() / garch11_fit.resid.dropna().std()\n",
+    "standaraized_residuals = garch11_fit.std_resid\n",
     "min_val = np.min(standaraized_residuals)\n",
     "max_val = np.max(standaraized_residuals)\n",
     "empirical_density = np.linspace(min_val, max_val, len(standaraized_residuals))\n",
@@ -778,18 +778,14 @@
     "ax[2, 2].set_title(\"Normal QQ-plot\")\n",
     "\n",
     "# Figure Row 4 Column 1\n",
-    "sm.graphics.tsa.plot_acf(\n",
-    "    garch11_fit.resid / garch11_fit.resid.std(), lags=20, ax=ax[3, 0]\n",
-    ")\n",
+    "sm.graphics.tsa.plot_acf(garch11_fit.std_resid, lags=20, ax=ax[3, 0])\n",
     "ax[3, 0].set_title(\"ACF of Standarized Residuals\")\n",
-    "ax[3, 0].set_ylim([-0.3, 0.3])\n",
+    "ax[3, 0].set_ylim([-0.12, 0.12])\n",
     "\n",
     "# Figure Row 4 Column 2\n",
-    "sm.graphics.tsa.plot_acf(\n",
-    "    (garch11_fit.resid / garch11_fit.resid.std()) ** 2, lags=20, ax=ax[3, 1]\n",
-    ")\n",
+    "sm.graphics.tsa.plot_acf((garch11_fit.std_resid) ** 2, lags=20, ax=ax[3, 1])\n",
     "ax[3, 1].set_title(\"ACF of Squared Standarized Residuals\")\n",
-    "ax[3, 1].set_ylim([-0.3, 0.3])\n",
+    "ax[3, 1].set_ylim([-0.12, 0.12])\n",
     "\n",
     "ax[3, 2].axis(\"off\")\n",
     "fig.tight_layout()\n",
@@ -928,9 +924,7 @@
     "ax[2, 0].set_title(\"Cross-Correlation of Squared Observations \\n vs Actual Observation\")\n",
     "\n",
     "# Figure Row 3 Column 2\n",
-    "standaraized_residuals = (\n",
-    "    garch11_t_fit.resid.dropna() / garch11_t_fit.resid.dropna().std()\n",
-    ")\n",
+    "standaraized_residuals = garch11_t_fit.std_resid\n",
     "min_val = np.min(standaraized_residuals)\n",
     "max_val = np.max(standaraized_residuals)\n",
     "empirical_density = np.linspace(min_val, max_val, len(standaraized_residuals))\n",
@@ -942,18 +936,14 @@
     "ax[2, 2].set_title(\"StudentsT QQ-plot\")\n",
     "\n",
     "# Figure Row 4 Column 1\n",
-    "sm.graphics.tsa.plot_acf(\n",
-    "    garch11_t_fit.resid / garch11_t_fit.resid.std(), lags=20, ax=ax[3, 0]\n",
-    ")\n",
+    "sm.graphics.tsa.plot_acf(garch11_t_fit.std_resid, lags=20, ax=ax[3, 0])\n",
     "ax[3, 0].set_title(\"ACF of Standarized Residuals\")\n",
-    "ax[3, 0].set_ylim([-0.3, 0.3])\n",
+    "ax[3, 0].set_ylim([-0.12, 0.12])\n",
     "\n",
     "# Figure Row 4 Column 2\n",
-    "sm.graphics.tsa.plot_acf(\n",
-    "    (garch11_t_fit.resid / garch11_t_fit.resid.std()) ** 2, lags=20, ax=ax[3, 1]\n",
-    ")\n",
+    "sm.graphics.tsa.plot_acf((garch11_t_fit.std_resid) ** 2, lags=20, ax=ax[3, 1])\n",
     "ax[3, 1].set_title(\"ACF of Squared Standarized Residuals\")\n",
-    "ax[3, 1].set_ylim([-0.3, 0.3])\n",
+    "ax[3, 1].set_ylim([-0.12, 0.12])\n",
     "\n",
     "ax[3, 2].axis(\"off\")\n",
     "fig.tight_layout()\n",
@@ -1095,7 +1085,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
