--- a/module-5/lesson-4/Lesson Notes - ECON_Module 5_Lesson 4.ipynb
+++ b/module-5/lesson-4/Lesson Notes - ECON_Module 5_Lesson 4.ipynb
@@ -223,9 +223,9 @@
     "\n",
     "Assume we have $x_t$ as a $r\\times 1$ state vector and $y_t$ as a $n\\times 1$ observation vector. The model can be written as follows:\n",
     "\n",
-    "**Observation Equation:** $y_{t} = Fx_{t} + v_{t}, \\ \\ v_{t}$ is the measurement noise.\n",
+    "**Observation Equation:** $y_{t} = F' x_{t} + v_{t}, \\ \\ v_{t}$ is the measurement noise.\n",
     "\n",
-    "**State Equation:** $x_{t} = Gx_{t-1} + w_{t}, \\ \\ w_{t}$ is the system noise.   \n",
+    "**State Equation:** $x_{t} = G x_{t-1} + w_{t}, \\ \\ w_{t}$ is the system noise.   \n",
     "\n",
     "where $v_{t} \\sim N(0,V)$  and  $w_{t} \\sim N(0,W)$.\n",
     "\n",
@@ -233,13 +233,13 @@
     "\n",
     "Following the assumption from the last section, we still assume that $v_{t}$ and $v_{s}$ are independent when $t \\neq s, \\ w_{t}$ and $w_{s}$ are independent when $t \\neq s$, and $v_{t}$ and $w_{s}$ are uncorrelated on all lags. \n",
     "\n",
-    "In the model, $F$ is a $n \\times r$ matrix, and it is called an observation matrix or design matrix. $G$ is a $r \\times r$ matrix and it is called a state transition matrix. \n",
+    "In the model, $F$ is a $r \\times n$ matrix, and it is called an observation matrix or design matrix. $G$ is a $r \\times r$ matrix and it is called a state transition matrix. \n",
     "\n",
     "Given so many variables we have mentioned so far, we will summarize these variables in the following list:\n",
     "\n",
     "> $x_{t}$: $r \\times 1$ state vector at time $t$; <br>\n",
     "> $y_{t}$: $n \\times 1$ observation vector at time $t$; <br>\n",
-    "> $F$: $n \\times r$ observation matrix between observation and state at time $t$; <br>\n",
+    "> $F$: $r \\times n$ observation matrix between observation and state at time $t$; <br>\n",
     "> $G$: $r \\times r$ state transition matrix between current state at $t$ and prior state at $t-1$; <br>\n",
     "> $v_{t}$: measurement noise from multivariate normal distribution; <br>\n",
     "> $w_{t}$: system noise from multivariate normal distribution; <br>\n",
@@ -287,10 +287,10 @@
     "> **Prior:**  $ x_{t}|D_{t-1} = x_{t}|y_{1:t-1} \\sim N(a_{t},R_{t}) $ <br>\n",
     "> Where $a_{t} = G m_{t-1}$ and $R_{t} = G' C_{t-1} G + W$ <br>\n",
     "\n",
-    "> **Likelihood:** $ y_{t}|x_{t} \\sim N(Fx_{t},V) $\n",
+    "> **Likelihood:** $ y_{t}|x_{t} \\sim N(F x_{t},V) $\n",
     "\n",
     "> **One-Step Forecast:**  $ y_{t}|y_{t-1} \\sim N(f_{t},Q_{t}) $ <br>\n",
-    "> Where $f_{t} = Fa_{t}$ and $Q_{t} = F'R_{t}F + V$\n",
+    "> Where $f_{t} = Fa_{t}$ and $Q_{t} = F' R_{t}F + V$\n",
     "\n",
     "> **Posterior:** $ x_{t}|D_{t} = x_{t}|y_{1:t} \\sim N(m_{t},C_{t}) $ <br>\n",
     "> Where \n",
@@ -327,22 +327,22 @@
     "\n",
     "> **State at $t+1$:** <br>\n",
     "> $x_{t+1} = Gm_{t}$ forecast state <br>\n",
-    "> $R_{t+1}  =G'C_{t}G + W$ forecast variance of state <br>\n",
+    "> $R_{t+1}  =G' C_{t}G + W$ forecast variance of state <br>\n",
     "\n",
     "> **Observation at $t+1$:** <br>\n",
-    "> $y_{t+1} = Fx_{t+1}$ forecast observation <br>\n",
-    "> $Q_{t+1} = F'R_{t+1}F + V$ forecast variance of observation <br>\n",
+    "> $y_{t+1} = F x_{t+1}$ forecast observation <br>\n",
+    "> $Q_{t+1} = F' R_{t+1}F + V$ forecast variance of observation <br>\n",
     "\n",
     "<br>\n",
     "When $d > 1$, we can use a recursive method to obtain the result as follows:\n",
     "\n",
     "> **State at $t+d$:** <br>\n",
     "> $x_{t+d} = Gm_{t+d-1}$  forecast state <br>\n",
-    "> $R_{t+d} = G'C_{t+d-1}G + W$ forecast variance of state <br>\n",
+    "> $R_{t+d} = G' C_{t+d-1}G + W$ forecast variance of state <br>\n",
     "\n",
     "> **Observation at $t+d$:** <br>\n",
-    "> $y_{t+d} = Fx_{t+d}$ forecast observation <br>\n",
-    "> $Q_{t+d} = F'R_{t+d}F + V$ forecast variance of observation <br>\n"
+    "> $y_{t+d} = F x_{t+d}$ forecast observation <br>\n",
+    "> $Q_{t+d} = F' R_{t+d}F + V$ forecast variance of observation <br>\n"
    ]
   },
   {
@@ -363,8 +363,8 @@
     "In this section, we are going to apply Kalman filter to build a GARCH(1,1) model. We have studied in the previous lessons that GARCH model has conditional heteroskedasticity feature on the observation level. Hence, we need to incorporate this feature to a Kalman filter model. We can write the model as follows:\n",
     "\n",
     "$$ \\begin{align*}\n",
-    "  y_{t}  &= Fx_{t} + z_{t} \\\\\n",
-    "  x_{t}  &= Gx_{t-1} + w_{t}, \\text{ where } w_{t} \\sim N(0,W) \\\\\n",
+    "  y_{t}  &= F x_{t} + z_{t} \\\\\n",
+    "  x_{t}  &= G x_{t-1} + w_{t}, \\text{ where } w_{t} \\sim N(0,W) \\\\\n",
     "  z_{t}  &= s_{t} \\epsilon_{t}, \\text{ where } \\epsilon_{t} \\sim N(0,1) \\\\\n",
     "  s_{t}^{2}  &= \\alpha_{0} + \\alpha_{1} z_{t-1}^{2} + \\beta_{1} s_{t-1}^{2}\n",
     "\\end{align*} $$\n",
@@ -470,7 +470,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
