--- a/module-6/lesson-3/Lesson Notes - ECON_Module 6_Lesson 3.ipynb
+++ b/module-6/lesson-3/Lesson Notes - ECON_Module 6_Lesson 3.ipynb
@@ -563,7 +563,7 @@
     "\n",
     "First, we add lag term $y_{t-1}$ to both side of the regression.\n",
     "\n",
-    "$$ y_t - y_{t-1} = \\theta_0 + \\theta_1 x_t + \\theta x_{t-1} + \\phi y_{t-1} + y_{t-1} + u_t $$\n",
+    "$$ y_t - y_{t-1} = \\theta_0 + \\theta_1 x_t + \\theta x_{t-1} + \\phi y_{t-1} - y_{t-1} + u_t $$\n",
     "\n",
     "$$ \\Rightarrow \\Delta y_t = \\theta_0 + \\theta_1 x_t + \\theta x_{t-1} - (1 - \\phi) y_{t-1} + u_t $$\n",
     "\n",
@@ -671,7 +671,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
