--- a/module-4/lesson-3/Lesson Notes - ECON_Module 4_Lesson 3.ipynb
+++ b/module-4/lesson-3/Lesson Notes - ECON_Module 4_Lesson 3.ipynb
@@ -167,7 +167,7 @@
     "\n",
     ">For AR(2), \n",
     "$ \\begin{cases}\n",
-    "  -2 < t \\alpha_{1} < 2, \\\\\n",
+    "  -2 < \\alpha_{1} < 2, \\\\\n",
     "  -1 < \\alpha_{2} < 1, \\\\\n",
     "  \\alpha_{1} + \\alpha_{2} < 1, \\\\\n",
     "  \\alpha_{2} - \\alpha_{1} < 1\n",
@@ -951,7 +951,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
