--- a/module-4/lesson-4/Lesson Notes - ECON_Module 4_Lesson 4.ipynb
+++ b/module-4/lesson-4/Lesson Notes - ECON_Module 4_Lesson 4.ipynb
@@ -159,13 +159,13 @@
     "> c. Set the absolute values of all the roots of $B >1$, then convert all the inequalities in terms of $\\alpha$ and $\\theta$ coefficients. Now we have a set of inequalities to regulate $\\alpha$ and $\\theta$ coefficients <br>\n",
     "> d. With these regularity conditions on $\\alpha$ and $\\theta$ coefficients, we can ensure that an ARMA($p,q$) time series $X_{t}$ can only be expressed as a function of its past values and not its future values. This property is called **causality**. The regularity conditions also ensure that $\\{W_{t}\\}$ from ARMA($p,q$) can be expressed as an infinite AR process. This property is called **invertibility**. <br>\n",
     "\n",
-    "Sometimes, we can find several models that work for our dataset. With several model options, we can choose the simplest one with the fewest parameters. Let’s look at one ARMA example. Assume we have an ARMA(2,3) process as follows:\n",
+    "Sometimes, we can find several models that work for our dataset. With several model options, we can choose the simplest one with the fewest parameters. Let’s look at one ARMA example. Assume we have an ARMA(2,2) process as follows:\n",
     "\n",
-    "$$ X_{t} = 0.2 X_{t-1} + 0.45 X_{t-2} + W_{t} + W_{t-1} + 0.25 W_{t-2} $$\n",
+    "$$ X_{t} = 0.2 X_{t-1} + 0.35 X_{t-2} + W_{t} + W_{t-1} + 0.25 W_{t-2} $$\n",
     "\n",
-    "We can rewrite the above ARMA(2,3) as follows:\n",
+    "We can rewrite the above ARMA(2,2) as follows:\n",
     "\n",
-    "$$ (1 - 0.2B - 0.35B^{2}) X_{t} = (1 + B - 0.25B^{2}) W_{t} $$ \n",
+    "$$ (1 - 0.2B - 0.35B^{2}) X_{t} = (1 + B + 0.25B^{2}) W_{t} $$ \n",
     "\n",
     "Then, we can rewrite them in various factors:\n",
     "\n",
@@ -174,6 +174,8 @@
     "Then, the model can be simplified as follows:\n",
     "\n",
     "$$ (1 - 0.7B) X_{t} = (1 - 0.5B) W_{t} $$\n",
+    "\n",
+    "an ARMA(1,1) model instead of an ARMA(2,2).\n",
     "\n",
     "The above rule of selecting the model with the least number of coefficients or the simplest model is called **the principle of parsimony**.\n"
    ]
@@ -800,7 +802,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
