Update from curriculum repo

--- a/module-2/lesson-4/Financial_Econometrics_Module 2_Lesson 4.ipynb
+++ b/module-2/lesson-4/Financial_Econometrics_Module 2_Lesson 4.ipynb
@@ -706,10 +706,13 @@
   {
    "cell_type": "markdown",
    "id": "1b22d6a1-a877-4f8e-ab41-1719a23df965",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "---\n",
-    "Copyright © 2022 WorldQuant University. This\n",
+    "Copyright 2023 WorldQuant University. This\n",
     "content is licensed solely for personal use. Redistribution or\n",
     "publication of this material is strictly prohibited.\n"
    ]
