--- a/module-1/lesson-2/Financial_Econometrics_Module 1_Lesson 2.ipynb
+++ b/module-1/lesson-2/Financial_Econometrics_Module 1_Lesson 2.ipynb
@@ -568,10 +568,13 @@
   {
    "cell_type": "markdown",
    "id": "418c151e",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "---\n",
-    "Copyright © 2022 WorldQuant University. This\n",
+    "Copyright 2023 WorldQuant University. This\n",
     "content is licensed solely for personal use. Redistribution or\n",
     "publication of this material is strictly prohibited.\n"
    ]
