--- a/module-1/lesson-4/Financial_Econometrics_Module 1_Lesson 4.ipynb
+++ b/module-1/lesson-4/Financial_Econometrics_Module 1_Lesson 4.ipynb
@@ -845,10 +845,13 @@
   {
    "cell_type": "markdown",
    "id": "f6b8fce6-57d9-4c9c-879c-80b767856386",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "---\n",
-    "Copyright © 2022 WorldQuant University. This\n",
+    "Copyright 2023 WorldQuant University. This\n",
     "content is licensed solely for personal use. Redistribution or\n",
     "publication of this material is strictly prohibited.\n"
    ]
