--- a/module-2/lesson-1/Financial_Econometrics_Module 2_Lesson 1.ipynb
+++ b/module-2/lesson-1/Financial_Econometrics_Module 2_Lesson 1.ipynb
@@ -833,10 +833,13 @@
   {
    "cell_type": "markdown",
    "id": "994930ab-13c3-4a0c-99cd-766e819c087a",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "---\n",
-    "Copyright © 2022 WorldQuant University. This\n",
+    "Copyright 2023 WorldQuant University. This\n",
     "content is licensed solely for personal use. Redistribution or\n",
     "publication of this material is strictly prohibited.\n"
    ]
