--- a/module-2/lesson-2/Financial_Econometrics_Module 2_Lesson 2.ipynb
+++ b/module-2/lesson-2/Financial_Econometrics_Module 2_Lesson 2.ipynb
@@ -574,10 +574,13 @@
   {
    "cell_type": "markdown",
    "id": "a6d787b5-40f5-4f6e-8635-4014bd99845a",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "---\n",
-    "Copyright © 2022 WorldQuant University. This\n",
+    "Copyright 2023 WorldQuant University. This\n",
     "content is licensed solely for personal use. Redistribution or\n",
     "publication of this material is strictly prohibited.\n"
    ]
