--- a/module-2/lesson-3/Financial_Econometrics_Module 2_Lesson 3.ipynb
+++ b/module-2/lesson-3/Financial_Econometrics_Module 2_Lesson 3.ipynb
@@ -732,10 +732,13 @@
   {
    "cell_type": "markdown",
    "id": "d4e35bea-7b04-4b0f-8013-8fb5f24d3713",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "---\n",
-    "Copyright © 2022 WorldQuant University. This\n",
+    "Copyright 2023 WorldQuant University. This\n",
     "content is licensed solely for personal use. Redistribution or\n",
     "publication of this material is strictly prohibited.\n"
    ]
